Fixed alignment of text on first slide

--- a/public/css/slide-bytecode.css
+++ b/public/css/slide-bytecode.css
@@ -76,6 +76,10 @@
   background-color: #1a1a1a !important;
 }
 
+.reveal .slides section:first-child {
+  top: 250px !important;
+}
+
 .reveal .slides section:first-child,
 .reveal .slides section:first-child > div > * {
   color: #ffffff !important;
